# varnish-vmod-geoip

./: COPYING  Makefile.am  README.rst  autogen.sh  configure.ac  vmod-geoip.spec
src/: Makefile.am  vmod_geoip.c  vmod_geoip.vcc
src/tests/: test01.vtc  test02.vtc
